--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,22 @@
-.vscode
-.idea
-.DS_STORE
+.serverless
+.DS_Store
 node_modules
 .module-cache
-*.log*
 build
 dist
+*.log*
+
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
