--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@typescript-eslint/parser": "^2.33.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.5.3",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
@@ -59,6 +60,7 @@
     "postcss-reporter": "^6.0.1",
     "postcss-url": "^8.0.0",
     "prettier": "^2.0.5",
+    "react-hot-loader": "^4.12.21",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "serverless-plugin-scripts": "^1.0.2",
@@ -80,6 +82,7 @@
     "react-router": "^5.2.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0"
   }
 }
